--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "pako": "^2.1.0",
     "papaparse": "^5.5.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -70,6 +71,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/diff": "^7.0.2",
     "@types/node": "^22.5.5",
+    "@types/pako": "^2",
     "@types/papaparse": "^5.3.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
