--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "diff": "^7.0.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.9.2",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "pako": "^2.1.0",
@@ -59,6 +61,7 @@
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
+    "react-wordcloud": "^1.2.7",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
