refactor: add dynamic backend url

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-VITE_SAMPLE_FILE_ID=e2086296-0670-4816-8d22-c89750a8a5c7
-VITE_SAMPLE_FILE_DOWNLOAD=ea2c4564-bcae-471a-bde8-843c0234b340
+
+VITE_SAMPLE_FILE_ID=2e2af89c-6f05-4e9b-bdb7-6d0c89af3e72
+VITE_SAMPLE_FILE_DOWNLOAD=967ec614-352a-4657-8194-8091f00c91be
+
+VITE_BACKEND_URL=http://localhost:8000
